@@ -1440,7 +1440,7 @@ static double FxEvaluateSubexpression(FxInfo *fx_info,
   subexpression=DestroyString(subexpression); \
   return(value); \
 }
-#define FxParseSubscription(subexpression,sentinal,p,q) \
+#define FxParseConditional(subexpression,sentinal,p,q) \
 { \
   p=subexpression; \
   for (q=(char *) p; (*q != (sentinal)) && (*q != '\0'); q++) \
@@ -1456,6 +1456,8 @@ static double FxEvaluateSubexpression(FxInfo *fx_info,
         OptionError,"UnableToParseExpression","`%s'",subexpression); \
       FxReturn(0.0); \
     } \
+  if (strlen(q) == 1) \
+    *(q+1)='\0'; \
   *q='\0'; \
 }
 
@@ -1885,8 +1887,8 @@ static double FxEvaluateSubexpression(FxInfo *fx_info,
         }
         case '?':
         {
-          (void) CopyMagickString(subexpression,++p,MagickPathExtent);
-          FxParseSubscription(subexpression,':',p,q);
+          (void) CopyMagickString(subexpression,++p,MagickPathExtent-1);
+          FxParseConditional(subexpression,':',p,q);
           if (fabs(alpha) >= MagickEpsilon)
             gamma=FxEvaluateSubexpression(fx_info,channel,x,y,p,depth+1,beta,
               exception);
@@ -2161,15 +2163,15 @@ static double FxEvaluateSubexpression(FxInfo *fx_info,
           /*
             Parse do(expression,condition test).
           */
-          length=CopyMagickString(subexpression,expression+3,MagickPathExtent);
+          length=CopyMagickString(subexpression,expression+3,
+            MagickPathExtent-1);
           if (length != 0)
             subexpression[length-1]='\0';
-          FxParseSubscription(subexpression,',',p,q);
+          FxParseConditional(subexpression,',',p,q);
           for (alpha=0.0; ; )
           {
-            if (*q != '\0')
-              alpha=FxEvaluateSubexpression(fx_info,channel,x,y,q+1,depth+1,
-                beta,exception);
+            alpha=FxEvaluateSubexpression(fx_info,channel,x,y,q+1,depth+1,beta,
+              exception);
             gamma=FxEvaluateSubexpression(fx_info,channel,x,y,p,depth+1,&sans,
               exception);
             if (fabs(gamma) < MagickEpsilon)
@@ -2228,23 +2230,23 @@ static double FxEvaluateSubexpression(FxInfo *fx_info,
           /*
             Parse for(initialization, condition test, expression).
           */
-          length=CopyMagickString(subexpression,expression+4,MagickPathExtent);
+          length=CopyMagickString(subexpression,expression+4,
+            MagickPathExtent-1);
           if (length != 0)
             subexpression[length-1]='\0';
-          FxParseSubscription(subexpression,',',p,q);
+          FxParseConditional(subexpression,',',p,q);
           alpha=FxEvaluateSubexpression(fx_info,channel,x,y,p,depth+1,&sans,
             exception);
-          (void) CopyMagickString(subexpression,q+1,MagickPathExtent);
-          FxParseSubscription(subexpression,',',p,q);
+          (void) CopyMagickString(subexpression,q+1,MagickPathExtent-1);
+          FxParseConditional(subexpression,',',p,q);
           for (alpha=0.0; ; )
           {
             gamma=FxEvaluateSubexpression(fx_info,channel,x,y,p,depth+1,&sans,
               exception);
             if (fabs(gamma) < MagickEpsilon)
               break;
-            if (*q != '\0')
-              alpha=FxEvaluateSubexpression(fx_info,channel,x,y,q+1,depth+1,
-                beta,exception);
+            alpha=FxEvaluateSubexpression(fx_info,channel,x,y,q+1,depth+1,beta,
+              exception);
           }
           FxReturn(alpha);
         }
@@ -2307,14 +2309,15 @@ static double FxEvaluateSubexpression(FxInfo *fx_info,
           size_t
             length;
 
-          length=CopyMagickString(subexpression,expression+3,MagickPathExtent);
+          length=CopyMagickString(subexpression,expression+3,
+            MagickPathExtent-1);
           if (length != 0)
             subexpression[length-1]='\0';
-          FxParseSubscription(subexpression,',',p,q);
+          FxParseConditional(subexpression,',',p,q);
           alpha=FxEvaluateSubexpression(fx_info,channel,x,y,p,depth+1,&sans,
             exception);
-          (void) CopyMagickString(subexpression,q+1,MagickPathExtent);
-          FxParseSubscription(subexpression,',',p,q);
+          (void) CopyMagickString(subexpression,q+1,MagickPathExtent-1);
+          FxParseConditional(subexpression,',',p,q);
           if (fabs(alpha) >= MagickEpsilon)
             alpha=FxEvaluateSubexpression(fx_info,channel,x,y,p,depth+1,beta,
               exception);
@@ -2605,19 +2608,19 @@ static double FxEvaluateSubexpression(FxInfo *fx_info,
           /*
             Parse while(condition test, expression).
           */
-          length=CopyMagickString(subexpression,expression+6,MagickPathExtent);
+          length=CopyMagickString(subexpression,expression+6,
+            MagickPathExtent-1);
           if (length != 0)
             subexpression[length-1]='\0';
-          FxParseSubscription(subexpression,',',p,q);
+          FxParseConditional(subexpression,',',p,q);
           for (alpha=0.0; ; )
           {
             gamma=FxEvaluateSubexpression(fx_info,channel,x,y,p,depth+1,&sans,
               exception);
             if (fabs(gamma) < MagickEpsilon)
               break;
-            if (*q != '\0')
-              alpha=FxEvaluateSubexpression(fx_info,channel,x,y,q+1,depth+1,
-                beta,exception);
+            alpha=FxEvaluateSubexpression(fx_info,channel,x,y,q+1,depth+1,
+              beta,exception);
           }
           FxReturn(alpha);
         }
